Try to fix tom select z-index

--- a/assets/css/layouts/_grid.scss
+++ b/assets/css/layouts/_grid.scss
@@ -119,10 +119,7 @@
 
 *:has(> .l-grid) {
 	container: lgrid / inline-size;
-
-	&:not(.form-group) {
-		z-index: 1;
-	}
+	z-index: 1;
 }
 
 @container lgrid (width < 320px) {
